-- Renamed all namespaces to lowercase names - this aligns with typical C++
   conventions and avoids confusion with classnames
-- Renamed 'basic' library to 'base'
-- Renamed 'basicGL' library to 'graphics'
-- Renamed 'ioDevice' library to 'iodevice'
-- Renamed 'linearSys' library to 'linearsystem'
-- Created 'models' libraries, it now includes was used to be in 'dynamics' and 'sensors'

-- Removed legacy support for 'formnames' in base Object
-- All form functions and Factory classes have been removed -- should use 'factory' functions

-- Renamed global framework configuration options to start with 'OE' instead
   of 'EAAGLES'

--------------------------------------------------------------------------------
base

   -- removed legacy support for factory names "BroadcastHandler", "MulticastHandler",
      and "UdpHandler" - instead use "UdpBroadcastHandler", "UdpMulticastHandler"
	  and "UdpUnicastHandler"

--------------------------------------------------------------------------------
dafif


--------------------------------------------------------------------------------
dis


--------------------------------------------------------------------------------
glut


--------------------------------------------------------------------------------
graphics


--------------------------------------------------------------------------------
instruments


--------------------------------------------------------------------------------
iodevice


--------------------------------------------------------------------------------
linearsystem



--------------------------------------------------------------------------------
maps


--------------------------------------------------------------------------------
models

   JSBSimModel class
      -- Added new slot parameter ('debugLevel') to set the debug level for JSBSim
         model instance. This controls the verbosity (i.e., output printed to console)