@@ -3,10 +3,10 @@
 // Description: Portions of class defined to support entity state PDUs
 //------------------------------------------------------------------------------
 
-#include "openeaagles/dis/NetIO.h"
-#include "openeaagles/dis/Nib.h"
-#include "openeaagles/dis/Ntm.h"
-#include "openeaagles/dis/pdu.h"
+#include "openeaagles/networks/dis/NetIO.h"
+#include "openeaagles/networks/dis/Nib.h"
+#include "openeaagles/networks/dis/Ntm.h"
+#include "openeaagles/networks/dis/pdu.h"
 
 #include "openeaagles/simulation/AirVehicle.h"
 #include "openeaagles/simulation/GroundVehicle.h"
