@@ -2,10 +2,10 @@
 // Class: dis::Nib
 //------------------------------------------------------------------------------
 
-#include "openeaagles/dis/Nib.h"
-#include "openeaagles/dis/Ntm.h"
-#include "openeaagles/dis/EmissionPduHandler.h"
-#include "openeaagles/dis/pdu.h"
+#include "openeaagles/networks/dis/Nib.h"
+#include "openeaagles/networks/dis/Ntm.h"
+#include "openeaagles/networks/dis/EmissionPduHandler.h"
+#include "openeaagles/networks/dis/pdu.h"
 
 #include "openeaagles/simulation/AirVehicle.h"
 #include "openeaagles/simulation/Jammer.h"
