@@ -13,6 +13,8 @@ general
 -- Renamed 'ioDevice' library to 'iodevice'
 -- Renamed 'linearSys' library to 'linearsystem'
 -- Created 'models' libraries, it now includes was used to be in 'dynamics' and 'sensors'
+-- Moved 'dis' folder into new 'networks' folder.  This so that interoperability interfaces
+   are logically grouped together.
 
 -- Removed legacy support for 'formnames' in base Object
 -- All form functions and Factory classes have been removed -- should use 'factory' functions
